--- a/ua/uaclient/Makefile.in
+++ b/ua/uaclient/Makefile.in
@@ -106,7 +106,8 @@ am__EXEEXT_1 = libuaclient_test$(EXEEXT)
 PROGRAMS = $(bin_PROGRAMS)
 am_libuaclient_test_OBJECTS =  \
 	libuaclient_test-computer_connect.$(OBJEXT) \
-	libuaclient_test-computer_endpoints.$(OBJEXT)
+	libuaclient_test-computer_endpoints.$(OBJEXT) \
+	libuaclient_test-computer_session.$(OBJEXT)
 libuaclient_test_OBJECTS = $(am_libuaclient_test_OBJECTS)
 libuaclient_test_DEPENDENCIES = libuaclient.a
 libuaclient_test_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
@@ -325,7 +326,8 @@ TESTS_ENVIRONMENT = TEST_SERVER_URI=$(TEST_SERVER_URI)
 # tests/thread_test.cpp
 libuaclient_test_SOURCES = \
  tests/computer_connect.cpp \
- tests/computer_endpoints.cpp
+ tests/computer_endpoints.cpp \
+ tests/computer_session.cpp
 
 libuaclient_test_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include $(UA_MAPPING_INCLUDES) $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(URI_INCLUDES)
 libuaclient_test_LDADD = libuaclient.a
@@ -488,6 +490,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libuaclient_a-socket_channel.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libuaclient_test-computer_connect.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libuaclient_test-computer_endpoints.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libuaclient_test-computer_session.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcua-main.Po@am__quote@
 
 .cpp.o:
@@ -580,6 +583,20 @@ libuaclient_test-computer_endpoints.obj: tests/computer_endpoints.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='tests/computer_endpoints.cpp' object='libuaclient_test-computer_endpoints.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libuaclient_test_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libuaclient_test-computer_endpoints.obj `if test -f 'tests/computer_endpoints.cpp'; then $(CYGPATH_W) 'tests/computer_endpoints.cpp'; else $(CYGPATH_W) '$(srcdir)/tests/computer_endpoints.cpp'; fi`
+
+libuaclient_test-computer_session.o: tests/computer_session.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libuaclient_test_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libuaclient_test-computer_session.o -MD -MP -MF $(DEPDIR)/libuaclient_test-computer_session.Tpo -c -o libuaclient_test-computer_session.o `test -f 'tests/computer_session.cpp' || echo '$(srcdir)/'`tests/computer_session.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/libuaclient_test-computer_session.Tpo $(DEPDIR)/libuaclient_test-computer_session.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='tests/computer_session.cpp' object='libuaclient_test-computer_session.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libuaclient_test_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libuaclient_test-computer_session.o `test -f 'tests/computer_session.cpp' || echo '$(srcdir)/'`tests/computer_session.cpp
+
+libuaclient_test-computer_session.obj: tests/computer_session.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libuaclient_test_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libuaclient_test-computer_session.obj -MD -MP -MF $(DEPDIR)/libuaclient_test-computer_session.Tpo -c -o libuaclient_test-computer_session.obj `if test -f 'tests/computer_session.cpp'; then $(CYGPATH_W) 'tests/computer_session.cpp'; else $(CYGPATH_W) '$(srcdir)/tests/computer_session.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/libuaclient_test-computer_session.Tpo $(DEPDIR)/libuaclient_test-computer_session.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='tests/computer_session.cpp' object='libuaclient_test-computer_session.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libuaclient_test_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libuaclient_test-computer_session.obj `if test -f 'tests/computer_session.cpp'; then $(CYGPATH_W) 'tests/computer_session.cpp'; else $(CYGPATH_W) '$(srcdir)/tests/computer_session.cpp'; fi`
 
 opcua-main.o: src/main.cpp
 @am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opcua-main.o -MD -MP -MF $(DEPDIR)/opcua-main.Tpo -c -o opcua-main.o `test -f 'src/main.cpp' || echo '$(srcdir)/'`src/main.cpp
