--- a/ua/server/Makefile.am
+++ b/ua/server/Makefile.am
@@ -91,24 +91,28 @@ opcuaserver_SOURCES = \
 
 opcuaserver_CPPFLAGS = $(INCLUDES)
 opcuaserver_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl  $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) -no-undefined
-
 TESTS += test_opcuaserver
 
 lib_LTLIBRARIES += libopcua_tcp_server.la
-
 addonsinclude_HEADERS = \
   include/opc/ua/server/addons/tcp_server_addon.h
-
 libopcua_tcp_server_la_SOURCES = \
   src/server/tcp_server.cpp \
   src/server/tcp_server_addon.cpp \
   src/socket_channel.cpp \
   src/thread.cpp
-
 libopcua_tcp_server_la_CPPFLAGS = $(INCLUDES)
 libopcua_tcp_server_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) -no-undefined
-
 TESTS += test_tcp_server_addon
+
+
+lib_LTLIBRARIES += libopcua_endpoints.la
+addonsinclude_HEADERS += include/opc/ua/server/addons/endpoints.h
+libopcua_endpoints_la_SOURCES = src/server/endpoints_addon.cpp
+libopcua_endpoints_la_CPPFLAGS = $(INCLUDES)
+libopcua_endpoints_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) -no-undefined
+TESTS += test_endpoints_addon
+
 TESTS += test_tcp_server
 
 endif
@@ -117,7 +121,7 @@ endif
 ##############################################################################
 # Tests
 
-TESTS_ENVIRONMENT = TEST_SERVER_URI=$(TEST_SERVER_URI) TCP_ADDON_PATH=${top_builddir}/.libs/libopcua_tcp_server.so
+TESTS_ENVIRONMENT = TEST_SERVER_URI=$(TEST_SERVER_URI) TCP_ADDON_PATH=${top_builddir}/.libs/libopcua_tcp_server.so ENDPOINTS_ADDON_PATH=$(top_builddir)/.libs/libopcua_endpoints.so
 check_PROGRAMS = $(TESTS)
 
 # tests/binary_handshake.cpp
@@ -161,9 +165,14 @@ test_tcp_server_addon_SOURCES = \
   src/binary_connection.cpp \
   src/socket_channel.cpp \
   tests/server/tcp_server_addon_test.cpp
-
 test_tcp_server_addon_CPPFLAGS = $(INCLUDES) $(TESTINCLUDES)
 test_tcp_server_addon_LDFLAGS = -lboost_thread -lpthread -ldl -Wl,-z,defs $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -no-undefined
+
+test_endpoints_addon_SOURCES = \
+  tests/server/endpoints_addon_test.cpp
+test_endpoints_addon_CPPFLAGS = $(INCLUDES) $(TESTINCLUDES)
+test_endpoints_addon_LDFLAGS = -lboost_thread -lpthread -ldl -Wl,-z,defs $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -no-undefined
+
 
 endif
 
