--- a/ua/server/Makefile.in
+++ b/ua/server/Makefile.in
@@ -51,8 +51,10 @@ bin_PROGRAMS = $(am__EXEEXT_1) $(am__EXEEXT_2)
 @BUILD_UA_CMD_TRUE@am__append_1 = opcua
 @BUILD_UA_SERVER_TRUE@am__append_2 = opcuaserver
 @BUILD_UA_SERVER_TRUE@am__append_3 = test_opcuaserver \
-@BUILD_UA_SERVER_TRUE@	test_tcp_server_addon test_tcp_server
-@BUILD_UA_SERVER_TRUE@am__append_4 = libopcua_tcp_server.la
+@BUILD_UA_SERVER_TRUE@	test_tcp_server_addon \
+@BUILD_UA_SERVER_TRUE@	test_endpoints_addon test_tcp_server
+@BUILD_UA_SERVER_TRUE@am__append_4 = libopcua_tcp_server.la \
+@BUILD_UA_SERVER_TRUE@	libopcua_endpoints.la
 check_PROGRAMS = $(am__EXEEXT_4)
 subdir = .
 DIST_COMMON = README $(am__addonsinclude_HEADERS_DIST) \
@@ -104,6 +106,16 @@ am__installdirs = "$(DESTDIR)$(libdir)" "$(DESTDIR)$(bindir)" \
 	"$(DESTDIR)$(uaclientincludedir)" \
 	"$(DESTDIR)$(uaserverincludedir)"
 LTLIBRARIES = $(lib_LTLIBRARIES)
+libopcua_endpoints_la_LIBADD =
+am__libopcua_endpoints_la_SOURCES_DIST =  \
+	src/server/endpoints_addon.cpp
+@BUILD_UA_SERVER_TRUE@am_libopcua_endpoints_la_OBJECTS = libopcua_endpoints_la-endpoints_addon.lo
+libopcua_endpoints_la_OBJECTS = $(am_libopcua_endpoints_la_OBJECTS)
+libopcua_endpoints_la_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CXXLD) $(AM_CXXFLAGS) \
+	$(CXXFLAGS) $(libopcua_endpoints_la_LDFLAGS) $(LDFLAGS) -o $@
+@BUILD_UA_SERVER_TRUE@am_libopcua_endpoints_la_rpath = -rpath \
+@BUILD_UA_SERVER_TRUE@	$(libdir)
 libopcua_tcp_server_la_LIBADD =
 am__libopcua_tcp_server_la_SOURCES_DIST = src/server/tcp_server.cpp \
 	src/server/tcp_server_addon.cpp src/socket_channel.cpp \
@@ -123,6 +135,7 @@ libopcua_tcp_server_la_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
 @BUILD_UA_SERVER_TRUE@am__EXEEXT_2 = opcuaserver$(EXEEXT)
 @BUILD_UA_SERVER_TRUE@am__EXEEXT_3 = test_opcuaserver$(EXEEXT) \
 @BUILD_UA_SERVER_TRUE@	test_tcp_server_addon$(EXEEXT) \
+@BUILD_UA_SERVER_TRUE@	test_endpoints_addon$(EXEEXT) \
 @BUILD_UA_SERVER_TRUE@	test_tcp_server$(EXEEXT)
 am__EXEEXT_4 = libuaclient_test$(EXEEXT) $(am__EXEEXT_3)
 PROGRAMS = $(bin_PROGRAMS)
@@ -168,6 +181,14 @@ opcuaserver_LDADD = $(LDADD)
 opcuaserver_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CXXLD) $(AM_CXXFLAGS) \
 	$(CXXFLAGS) $(opcuaserver_LDFLAGS) $(LDFLAGS) -o $@
+am__test_endpoints_addon_SOURCES_DIST =  \
+	tests/server/endpoints_addon_test.cpp
+@BUILD_UA_SERVER_TRUE@am_test_endpoints_addon_OBJECTS = test_endpoints_addon-endpoints_addon_test.$(OBJEXT)
+test_endpoints_addon_OBJECTS = $(am_test_endpoints_addon_OBJECTS)
+test_endpoints_addon_LDADD = $(LDADD)
+test_endpoints_addon_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
+	$(LIBTOOLFLAGS) --mode=link $(CXXLD) $(AM_CXXFLAGS) \
+	$(CXXFLAGS) $(test_endpoints_addon_LDFLAGS) $(LDFLAGS) -o $@
 am__test_opcuaserver_SOURCES_DIST = src/server/server_options.cpp \
 	src/thread.cpp tests/server/test_server_options.cpp \
 	tests/thread_test.cpp
@@ -227,18 +248,22 @@ CCLD = $(CC)
 LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
 	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) \
 	$(LDFLAGS) -o $@
-SOURCES = $(libopcua_tcp_server_la_SOURCES) \
-	$(libuaclient_test_SOURCES) $(opcua_SOURCES) \
-	$(opcuaserver_SOURCES) $(test_opcuaserver_SOURCES) \
+SOURCES = $(libopcua_endpoints_la_SOURCES) \
+	$(libopcua_tcp_server_la_SOURCES) $(libuaclient_test_SOURCES) \
+	$(opcua_SOURCES) $(opcuaserver_SOURCES) \
+	$(test_endpoints_addon_SOURCES) $(test_opcuaserver_SOURCES) \
 	$(test_tcp_server_SOURCES) $(test_tcp_server_addon_SOURCES)
-DIST_SOURCES = $(am__libopcua_tcp_server_la_SOURCES_DIST) \
+DIST_SOURCES = $(am__libopcua_endpoints_la_SOURCES_DIST) \
+	$(am__libopcua_tcp_server_la_SOURCES_DIST) \
 	$(libuaclient_test_SOURCES) $(am__opcua_SOURCES_DIST) \
 	$(am__opcuaserver_SOURCES_DIST) \
+	$(am__test_endpoints_addon_SOURCES_DIST) \
 	$(am__test_opcuaserver_SOURCES_DIST) \
 	$(am__test_tcp_server_SOURCES_DIST) \
 	$(am__test_tcp_server_addon_SOURCES_DIST)
 am__addonsinclude_HEADERS_DIST =  \
-	include/opc/ua/server/addons/tcp_server_addon.h
+	include/opc/ua/server/addons/tcp_server_addon.h \
+	include/opc/ua/server/addons/endpoints.h
 am__uaserverinclude_HEADERS_DIST = include/opc/ua/server/server.h \
 	include/opc/ua/server/tcp_server.h
 HEADERS = $(addonsinclude_HEADERS) $(opcuainclude_HEADERS) \
@@ -458,9 +483,8 @@ lib_LTLIBRARIES = $(am__append_4)
 
 @BUILD_UA_SERVER_TRUE@opcuaserver_CPPFLAGS = $(INCLUDES)
 @BUILD_UA_SERVER_TRUE@opcuaserver_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl  $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) -no-undefined
-@BUILD_UA_SERVER_TRUE@addonsinclude_HEADERS = \
-@BUILD_UA_SERVER_TRUE@  include/opc/ua/server/addons/tcp_server_addon.h
-
+@BUILD_UA_SERVER_TRUE@addonsinclude_HEADERS = include/opc/ua/server/addons/tcp_server_addon.h \
+@BUILD_UA_SERVER_TRUE@	include/opc/ua/server/addons/endpoints.h
 @BUILD_UA_SERVER_TRUE@libopcua_tcp_server_la_SOURCES = \
 @BUILD_UA_SERVER_TRUE@  src/server/tcp_server.cpp \
 @BUILD_UA_SERVER_TRUE@  src/server/tcp_server_addon.cpp \
@@ -469,10 +493,13 @@ lib_LTLIBRARIES = $(am__append_4)
 
 @BUILD_UA_SERVER_TRUE@libopcua_tcp_server_la_CPPFLAGS = $(INCLUDES)
 @BUILD_UA_SERVER_TRUE@libopcua_tcp_server_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) -no-undefined
+@BUILD_UA_SERVER_TRUE@libopcua_endpoints_la_SOURCES = src/server/endpoints_addon.cpp
+@BUILD_UA_SERVER_TRUE@libopcua_endpoints_la_CPPFLAGS = $(INCLUDES)
+@BUILD_UA_SERVER_TRUE@libopcua_endpoints_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) -no-undefined
 
 ##############################################################################
 # Tests
-TESTS_ENVIRONMENT = TEST_SERVER_URI=$(TEST_SERVER_URI) TCP_ADDON_PATH=${top_builddir}/.libs/libopcua_tcp_server.so
+TESTS_ENVIRONMENT = TEST_SERVER_URI=$(TEST_SERVER_URI) TCP_ADDON_PATH=${top_builddir}/.libs/libopcua_tcp_server.so ENDPOINTS_ADDON_PATH=$(top_builddir)/.libs/libopcua_endpoints.so
 
 # tests/binary_handshake.cpp
 libuaclient_test_SOURCES = \
@@ -513,6 +540,11 @@ libuaclient_test_LDFLAGS = -lpthread -Wl,-z,defs $(UA_MAPPING_LIBS)  $(GTEST_LIB
 
 @BUILD_UA_SERVER_TRUE@test_tcp_server_addon_CPPFLAGS = $(INCLUDES) $(TESTINCLUDES)
 @BUILD_UA_SERVER_TRUE@test_tcp_server_addon_LDFLAGS = -lboost_thread -lpthread -ldl -Wl,-z,defs $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -no-undefined
+@BUILD_UA_SERVER_TRUE@test_endpoints_addon_SOURCES = \
+@BUILD_UA_SERVER_TRUE@  tests/server/endpoints_addon_test.cpp
+
+@BUILD_UA_SERVER_TRUE@test_endpoints_addon_CPPFLAGS = $(INCLUDES) $(TESTINCLUDES)
+@BUILD_UA_SERVER_TRUE@test_endpoints_addon_LDFLAGS = -lboost_thread -lpthread -ldl -Wl,-z,defs $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -no-undefined
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
@@ -598,6 +630,8 @@ clean-libLTLIBRARIES:
 	  echo "rm -f \"$${dir}/so_locations\""; \
 	  rm -f "$${dir}/so_locations"; \
 	done
+libopcua_endpoints.la: $(libopcua_endpoints_la_OBJECTS) $(libopcua_endpoints_la_DEPENDENCIES) $(EXTRA_libopcua_endpoints_la_DEPENDENCIES) 
+	$(libopcua_endpoints_la_LINK) $(am_libopcua_endpoints_la_rpath) $(libopcua_endpoints_la_OBJECTS) $(libopcua_endpoints_la_LIBADD) $(LIBS)
 libopcua_tcp_server.la: $(libopcua_tcp_server_la_OBJECTS) $(libopcua_tcp_server_la_DEPENDENCIES) $(EXTRA_libopcua_tcp_server_la_DEPENDENCIES) 
 	$(libopcua_tcp_server_la_LINK) $(am_libopcua_tcp_server_la_rpath) $(libopcua_tcp_server_la_OBJECTS) $(libopcua_tcp_server_la_LIBADD) $(LIBS)
 install-binPROGRAMS: $(bin_PROGRAMS)
@@ -661,6 +695,9 @@ opcua$(EXEEXT): $(opcua_OBJECTS) $(opcua_DEPENDENCIES) $(EXTRA_opcua_DEPENDENCIE
 opcuaserver$(EXEEXT): $(opcuaserver_OBJECTS) $(opcuaserver_DEPENDENCIES) $(EXTRA_opcuaserver_DEPENDENCIES) 
 	@rm -f opcuaserver$(EXEEXT)
 	$(opcuaserver_LINK) $(opcuaserver_OBJECTS) $(opcuaserver_LDADD) $(LIBS)
+test_endpoints_addon$(EXEEXT): $(test_endpoints_addon_OBJECTS) $(test_endpoints_addon_DEPENDENCIES) $(EXTRA_test_endpoints_addon_DEPENDENCIES) 
+	@rm -f test_endpoints_addon$(EXEEXT)
+	$(test_endpoints_addon_LINK) $(test_endpoints_addon_OBJECTS) $(test_endpoints_addon_LDADD) $(LIBS)
 test_opcuaserver$(EXEEXT): $(test_opcuaserver_OBJECTS) $(test_opcuaserver_DEPENDENCIES) $(EXTRA_test_opcuaserver_DEPENDENCIES) 
 	@rm -f test_opcuaserver$(EXEEXT)
 	$(test_opcuaserver_LINK) $(test_opcuaserver_OBJECTS) $(test_opcuaserver_LDADD) $(LIBS)
@@ -677,6 +714,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libopcua_endpoints_la-endpoints_addon.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libopcua_tcp_server_la-socket_channel.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libopcua_tcp_server_la-tcp_server.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libopcua_tcp_server_la-tcp_server_addon.Plo@am__quote@
@@ -698,6 +736,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcuaserver-server_options.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcuaserver-socket_channel.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcuaserver-thread.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_endpoints_addon-endpoints_addon_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcuaserver-server_options.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcuaserver-test_server_options.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcuaserver-thread.Po@am__quote@
@@ -732,6 +771,13 @@ distclean-compile:
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='$<' object='$@' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LTCXXCOMPILE) -c -o $@ $<
+
+libopcua_endpoints_la-endpoints_addon.lo: src/server/endpoints_addon.cpp
+@am__fastdepCXX_TRUE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libopcua_endpoints_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libopcua_endpoints_la-endpoints_addon.lo -MD -MP -MF $(DEPDIR)/libopcua_endpoints_la-endpoints_addon.Tpo -c -o libopcua_endpoints_la-endpoints_addon.lo `test -f 'src/server/endpoints_addon.cpp' || echo '$(srcdir)/'`src/server/endpoints_addon.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/libopcua_endpoints_la-endpoints_addon.Tpo $(DEPDIR)/libopcua_endpoints_la-endpoints_addon.Plo
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/server/endpoints_addon.cpp' object='libopcua_endpoints_la-endpoints_addon.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libopcua_endpoints_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libopcua_endpoints_la-endpoints_addon.lo `test -f 'src/server/endpoints_addon.cpp' || echo '$(srcdir)/'`src/server/endpoints_addon.cpp
 
 libopcua_tcp_server_la-tcp_server.lo: src/server/tcp_server.cpp
 @am__fastdepCXX_TRUE@	$(LIBTOOL)  --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libopcua_tcp_server_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libopcua_tcp_server_la-tcp_server.lo -MD -MP -MF $(DEPDIR)/libopcua_tcp_server_la-tcp_server.Tpo -c -o libopcua_tcp_server_la-tcp_server.lo `test -f 'src/server/tcp_server.cpp' || echo '$(srcdir)/'`src/server/tcp_server.cpp
@@ -998,6 +1044,20 @@ opcuaserver-thread.obj: src/thread.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/thread.cpp' object='opcuaserver-thread.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opcuaserver-thread.obj `if test -f 'src/thread.cpp'; then $(CYGPATH_W) 'src/thread.cpp'; else $(CYGPATH_W) '$(srcdir)/src/thread.cpp'; fi`
+
+test_endpoints_addon-endpoints_addon_test.o: tests/server/endpoints_addon_test.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_endpoints_addon_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_endpoints_addon-endpoints_addon_test.o -MD -MP -MF $(DEPDIR)/test_endpoints_addon-endpoints_addon_test.Tpo -c -o test_endpoints_addon-endpoints_addon_test.o `test -f 'tests/server/endpoints_addon_test.cpp' || echo '$(srcdir)/'`tests/server/endpoints_addon_test.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/test_endpoints_addon-endpoints_addon_test.Tpo $(DEPDIR)/test_endpoints_addon-endpoints_addon_test.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='tests/server/endpoints_addon_test.cpp' object='test_endpoints_addon-endpoints_addon_test.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_endpoints_addon_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o test_endpoints_addon-endpoints_addon_test.o `test -f 'tests/server/endpoints_addon_test.cpp' || echo '$(srcdir)/'`tests/server/endpoints_addon_test.cpp
+
+test_endpoints_addon-endpoints_addon_test.obj: tests/server/endpoints_addon_test.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_endpoints_addon_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_endpoints_addon-endpoints_addon_test.obj -MD -MP -MF $(DEPDIR)/test_endpoints_addon-endpoints_addon_test.Tpo -c -o test_endpoints_addon-endpoints_addon_test.obj `if test -f 'tests/server/endpoints_addon_test.cpp'; then $(CYGPATH_W) 'tests/server/endpoints_addon_test.cpp'; else $(CYGPATH_W) '$(srcdir)/tests/server/endpoints_addon_test.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/test_endpoints_addon-endpoints_addon_test.Tpo $(DEPDIR)/test_endpoints_addon-endpoints_addon_test.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='tests/server/endpoints_addon_test.cpp' object='test_endpoints_addon-endpoints_addon_test.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_endpoints_addon_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o test_endpoints_addon-endpoints_addon_test.obj `if test -f 'tests/server/endpoints_addon_test.cpp'; then $(CYGPATH_W) 'tests/server/endpoints_addon_test.cpp'; else $(CYGPATH_W) '$(srcdir)/tests/server/endpoints_addon_test.cpp'; fi`
 
 test_opcuaserver-server_options.o: src/server/server_options.cpp
 @am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_opcuaserver-server_options.o -MD -MP -MF $(DEPDIR)/test_opcuaserver-server_options.Tpo -c -o test_opcuaserver-server_options.o `test -f 'src/server/server_options.cpp' || echo '$(srcdir)/'`src/server/server_options.cpp
