--- a/exe/Makefile.in
+++ b/exe/Makefile.in
@@ -80,14 +80,14 @@ am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(configdir)" \
 am__EXEEXT_1 = test_opcuaserver$(EXEEXT)
 PROGRAMS = $(bin_PROGRAMS)
 am_opcuaserver_OBJECTS = opcuaserver-daemon.$(OBJEXT) \
-	opcuaserver-server.$(OBJEXT) opcuaserver-server_main.$(OBJEXT) \
+	opcuaserver-server_main.$(OBJEXT) \
 	opcuaserver-server_options.$(OBJEXT)
 opcuaserver_OBJECTS = $(am_opcuaserver_OBJECTS)
 opcuaserver_LDADD = $(LDADD)
 opcuaserver_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CXXLD) $(AM_CXXFLAGS) \
 	$(CXXFLAGS) $(opcuaserver_LDFLAGS) $(LDFLAGS) -o $@
-am_test_opcuaserver_OBJECTS = test_opcuaserver-server.$(OBJEXT) \
+am_test_opcuaserver_OBJECTS =  \
 	test_opcuaserver-server_options.$(OBJEXT) \
 	test_opcuaserver-test_server_options.$(OBJEXT)
 test_opcuaserver_OBJECTS = $(am_test_opcuaserver_OBJECTS)
@@ -291,8 +291,6 @@ TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES) tests
 opcuaserver_SOURCES = \
   src/daemon.cpp \
   src/daemon.h \
-  src/server.cpp \
-  src/server.h \
   src/server_main.cpp \
   src/server_options.cpp \
   src/server_options.h
@@ -321,7 +319,6 @@ EXTRA_DIST = \
 
 TESTS_ENVIRONMENT = LD_LIBRARY_PATH=$(abs_top_builddir)/exe
 test_opcuaserver_SOURCES = \
-  src/server.cpp \
   src/server_options.cpp \
   tests/test_server_options.cpp
 
@@ -432,10 +429,8 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcuaserver-daemon.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcuaserver-server.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcuaserver-server_main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcuaserver-server_options.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcuaserver-server.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcuaserver-server_options.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcuaserver-test_server_options.Po@am__quote@
 
@@ -474,20 +469,6 @@ opcuaserver-daemon.obj: src/daemon.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opcuaserver-daemon.obj `if test -f 'src/daemon.cpp'; then $(CYGPATH_W) 'src/daemon.cpp'; else $(CYGPATH_W) '$(srcdir)/src/daemon.cpp'; fi`
 
-opcuaserver-server.o: src/server.cpp
-@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opcuaserver-server.o -MD -MP -MF $(DEPDIR)/opcuaserver-server.Tpo -c -o opcuaserver-server.o `test -f 'src/server.cpp' || echo '$(srcdir)/'`src/server.cpp
-@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/opcuaserver-server.Tpo $(DEPDIR)/opcuaserver-server.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/server.cpp' object='opcuaserver-server.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opcuaserver-server.o `test -f 'src/server.cpp' || echo '$(srcdir)/'`src/server.cpp
-
-opcuaserver-server.obj: src/server.cpp
-@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opcuaserver-server.obj -MD -MP -MF $(DEPDIR)/opcuaserver-server.Tpo -c -o opcuaserver-server.obj `if test -f 'src/server.cpp'; then $(CYGPATH_W) 'src/server.cpp'; else $(CYGPATH_W) '$(srcdir)/src/server.cpp'; fi`
-@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/opcuaserver-server.Tpo $(DEPDIR)/opcuaserver-server.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/server.cpp' object='opcuaserver-server.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opcuaserver-server.obj `if test -f 'src/server.cpp'; then $(CYGPATH_W) 'src/server.cpp'; else $(CYGPATH_W) '$(srcdir)/src/server.cpp'; fi`
-
 opcuaserver-server_main.o: src/server_main.cpp
 @am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opcuaserver-server_main.o -MD -MP -MF $(DEPDIR)/opcuaserver-server_main.Tpo -c -o opcuaserver-server_main.o `test -f 'src/server_main.cpp' || echo '$(srcdir)/'`src/server_main.cpp
 @am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/opcuaserver-server_main.Tpo $(DEPDIR)/opcuaserver-server_main.Po
@@ -515,20 +496,6 @@ opcuaserver-server_options.obj: src/server_options.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/server_options.cpp' object='opcuaserver-server_options.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opcuaserver-server_options.obj `if test -f 'src/server_options.cpp'; then $(CYGPATH_W) 'src/server_options.cpp'; else $(CYGPATH_W) '$(srcdir)/src/server_options.cpp'; fi`
-
-test_opcuaserver-server.o: src/server.cpp
-@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_opcuaserver-server.o -MD -MP -MF $(DEPDIR)/test_opcuaserver-server.Tpo -c -o test_opcuaserver-server.o `test -f 'src/server.cpp' || echo '$(srcdir)/'`src/server.cpp
-@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/test_opcuaserver-server.Tpo $(DEPDIR)/test_opcuaserver-server.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/server.cpp' object='test_opcuaserver-server.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o test_opcuaserver-server.o `test -f 'src/server.cpp' || echo '$(srcdir)/'`src/server.cpp
-
-test_opcuaserver-server.obj: src/server.cpp
-@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_opcuaserver-server.obj -MD -MP -MF $(DEPDIR)/test_opcuaserver-server.Tpo -c -o test_opcuaserver-server.obj `if test -f 'src/server.cpp'; then $(CYGPATH_W) 'src/server.cpp'; else $(CYGPATH_W) '$(srcdir)/src/server.cpp'; fi`
-@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/test_opcuaserver-server.Tpo $(DEPDIR)/test_opcuaserver-server.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/server.cpp' object='test_opcuaserver-server.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o test_opcuaserver-server.obj `if test -f 'src/server.cpp'; then $(CYGPATH_W) 'src/server.cpp'; else $(CYGPATH_W) '$(srcdir)/src/server.cpp'; fi`
 
 test_opcuaserver-server_options.o: src/server_options.cpp
 @am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_opcuaserver-server_options.o -MD -MP -MF $(DEPDIR)/test_opcuaserver-server_options.Tpo -c -o test_opcuaserver-server_options.o `test -f 'src/server_options.cpp' || echo '$(srcdir)/'`src/server_options.cpp
